BUG: schedules: trip list header messed up in IE Edge (#1978)
* BUG: schedules: trip list header messed up in IE Edge

* Fixed indentation issue

--- a/apps/site/assets/css/_schedule-v2.scss
+++ b/apps/site/assets/css/_schedule-v2.scss
@@ -206,7 +206,10 @@ a {
   border: 0;
   color: $white;
   margin-top: $base-spacing;
-  position: sticky;
+
+  @include media-breakpoint-down(sm) {
+    position: sticky;
+  }
 
   * {
     color: $white;
